# HomePulse

./: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build-apk.yml
homepulse/: state.py
homepulse/components/: device_card.py
homepulse/views/: home_view.py  room_view.py  security_view.py  settings_view.py
src/: main.py  theme.ts  types.ts
src/components/: DeviceCard.tsx
src/homepulse/: theme.py
src/homepulse/views/: scenes_view.py
src/screens/: HomeScreen.tsx  RoomScreen.tsx  ScenesScreen.tsx  SecurityScreen.tsx  SettingsScreen.tsx
src/state/: AppState.tsx  initial.ts
