[project]
name = "homepulse"
version = "0.1.0"
description = "HomePulse — aplikacja inteligentnego domu (projekt na kurs Systemy Mobilne)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Filip Kipiel" }]
dependencies = ["flet>=0.85.0,<0.86.0"]

[tool.flet]
org = "pl.kipiel"
product = "HomePulse"
company = "Filip Kipiel"
copyright = "Copyright (C) 2026 by Filip Kipiel"

[tool.flet.app]
path = "src"
